@@ -1,15 +1,10 @@
 ﻿// The NiTiS-Dev licenses this file to you under the MIT license.
-using Terraria;
-using Terraria.ID;
-using Terraria.ModLoader;
-
 namespace Renucation.Content.Items.Placeable;
 public class LaboratoryBlock : ModItem
 {
 	public override void SetStaticDefaults()
 	{
 		SacrificeTotal = 100;
-		//ItemID.Sets.ExtractinatorMode[Item.type] = Item.type; Extractor
 	}
 
 	public override void SetDefaults()
